[package]
name = "atom_viewer"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level =  1 

[profile.dev.package."*"]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_panorbit_camera = "0.8.0"
bevy_egui = "0.22"
rand = "0.8.5"
